# pytrak

./: .gitignore  99-trakstar.rules  CHANGELOG.md  CMakeLists.txt  Dockerfile  GoodPlots.ipynb  MIGRATION_SUMMARY.md  QUICKSTART_ROS2.md  README.md  ROS2_MIGRATION_GUIDE.md  build.sh  build_docker.sh  calibration_info  calibration_poses  calibration_testing_commands  environment.yml  p1_plotting_data.ipynb  package.xml  parse_csv.py  parse_patient_data.py  parse_rosbag.py  plot_data.ipynb  process_csv_data.ipynb  requirements.txt  rosbag_commands.txt  setup.py  volitional_1_plotting.ipynb
collected_data/csv/: trak_2023-11-13-19-07-33.csv  trak_2023-11-25-13-00-29.csv  trak_2023-11-25-13-43-14.csv  trak_2023-12-01-14-19-41_futek.csv  trak_2023-12-01-14-19-41_tf.csv  trak_2023-12-01-15-42-32_futek.csv  trak_2023-12-05-16-40-02.csv  trak_2023-12-05-17-06-30.csv  trak_2023-12-07-11-30-43.csv
collected_data/rosbag/: p1_2023-12-20-14-13-43_0.bag  p1_test4_2023-12-20-15-19-58_0.bag  p1_train2_2023-12-20-15-04-05_0.bag  p1_trainemg2_2023-12-20-14-47-57_0.bag  trak_2023-11-13-19-07-33.bag  trak_2023-11-25-13-00-29.bag  trak_2023-11-25-13-33-54.bag  trak_2023-11-25-13-43-14.bag  trak_2023-11-25-13-48-35.bag  trak_2023-11-27-15-21-46.bag  trak_2023-12-01-14-19-41.bag  trak_2023-12-05-16-40-02.bag  trak_2023-12-05-17-06-30.bag  trak_2023-12-07-11-02-32.bag  trak_2023-12-07-11-02-49.bag  trak_2023-12-07-11-30-43.bag  trak_2023-12-07-12-30-39.bag  trak_2023-12-07-12-30-47.bag  trak_2023-12-07-12-31-19.bag  trak_2023-12-07-12-33-13.bag  trak_2023-12-07-12-36-09.bag  trak_2023-12-07-12-42-21.bag  trak_2023-12-07-12-50-51.bag  trak_2023-12-07-12-51-19.bag  trak_2023-12-07-12-51-53.bag  trak_2023-12-07-12-56-12.bag  trak_2023-12-07-17-09-01.bag  trak_2023-12-07-17-09-08.bag  trak_2023-12-07-17-20-09.bag  trak_2023-12-07-17-21-11.bag  trak_2023-12-07-17-21-40.bag  trak_2023-12-07-17-34-42.bag  trak_2023-12-07-17-47-57.bag  trak_2023-12-07-17-51-11.bag  trak_2023-12-07-17-52-22.bag  trak_2023-12-07-17-53-02.bag  trak_2023-12-07-18-10-04.bag  trak_2023-12-07-18-10-33.bag  trak_2023-12-07-18-11-50.bag  trak_2023-12-07-21-43-27.bag  (+8 more)
collected_data/rosbag/p12_jan_11_2024/: p12_end_2024-01-11-15-52-23_0.bag
data_plotting/: parse_patient_data.py  readME.txt  volitional_1_plotting.ipynb
examples/: simple_example.py  trakstar_example.py
launch/: .trakstar.launch.swp  .trakstar_futek.launch.swp  ascension.launch.py  trakstar.launch  trakstar.launch.py  trakstar_futek.launch  trakstar_futek.launch.py
msg/: TrakstarMsg.msg
nodes/: CMakeLists.txt  angles_node.py  calculate_joint_lengths.py  calibration_data_collection.py  calibration_information.py  calibration_information_1  calibration_poses  joint_lengths  joint_node.py  parse_rosbag.py  publish_calibrated_data.py  rosbag_commands.txt  sensor_information  trakstar_mounting_calibration.py  trakstar_node.cpp
scripts/: trakstar_mounting_calibration.py  various_commands.py
src/: CMakeLists.txt  PointATC3DG.cpp  python_wrapper.cpp
tools/: CMakeLists.txt
